Ensure all "cd" workflows have workflow_dispatch and we honor the environment if we're in that path

--- a/.github/workflows/cd-frontend-infra.yml
+++ b/.github/workflows/cd-frontend-infra.yml
@@ -52,7 +52,7 @@ jobs:
       fail-fast: false
       matrix:
         directory: ["service"]
-        envs: ${{ github.event_name == 'release' && fromJSON('["prod"]') || github.ref_name == 'main' && fromJSON('["dev", "staging"]') || fromJSON('["dev"]') }}
+        envs: ${{ inputs.environment || github.event_name == 'release' && fromJSON('["prod"]') || github.ref_name == 'main' && fromJSON('["dev", "staging"]') || fromJSON('["dev"]') }}
 
     permissions:
       contents: read
