--- a/.github/workflows/cd-analytics.yml
+++ b/.github/workflows/cd-analytics.yml
@@ -23,7 +23,7 @@ on:
 
 jobs:
   analytics-checks:
-    name: Run Analyics Checks
+    name: Run Analytics Checks
     uses: ./.github/workflows/ci-analytics.yml
     secrets: inherit
 
@@ -41,7 +41,7 @@ jobs:
       max-parallel: 1
       fail-fast: false
       matrix:
-        envs: ${{ github.event_name == 'release' && fromJSON('["prod"]') || github.ref_name == 'main' && fromJSON('["dev", "staging"]') || fromJSON('["dev"]') }}
+        envs: ${{ inputs.environment || github.event_name == 'release' && fromJSON('["prod"]') || github.ref_name == 'main' && fromJSON('["dev", "staging"]') || fromJSON('["dev"]') }}
     with:
       app_name: "analytics"
       environment: ${{ matrix.envs }}
