--- a/.github/workflows/cd-api-infra.yml
+++ b/.github/workflows/cd-api-infra.yml
@@ -52,7 +52,7 @@ jobs:
       fail-fast: false
       matrix:
         directory: ["database", "service"]
-        envs: ${{ github.event_name == 'release' && fromJSON('["prod"]') || fromJSON('["dev", "staging"]') }} # deploy prod on releases, otherwise deploy staging and dev
+        envs: ${{ inputs.environment || github.event_name == 'release' && fromJSON('["prod"]') || github.ref_name == 'main' && fromJSON('["dev", "staging"]') || fromJSON('["dev"]') }}
 
     permissions:
       contents: read
